--- a/first-angular-app/package.json
+++ b/first-angular-app/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^3.2.0",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.5.4",
-    "rxjs": "5.6.0-forward-compat.4",
+    "jquery": "^3.3.1",
+    "rxjs": "^5.4.1",
+    "rxjs-compat": "^6.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
